--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
                     <!-- Markup for Dynamic content selcected by hotspots-->    
                     <div class="region-tooltip-content western">
                         <h1>Western, central & northern Africa</h1>
-                        <p>There is less than 500 surviving cheetahs in Western, central & northern Africa</p>
+                        <p>There is less than 500 surviving cheetahs in Western, Central & Northern Africa</p>
                     </div>
 
                     <!-- Markup for Dynamic content selcected by hotspots-->
                     <div class="region-tooltip-content southern">
                         <h1>Southern Africa</h1>
-                        <p>There is less than 4,000 surviving cheetahs in southern Africa</p>
+                        <p>There is less than 4,000 surviving cheetahs in Southern Africa</p>
                     </div>
 
                     <!-- Markup for Dynamic content selcected by hotspots-->
                     <div class="region-tooltip-content eastern">
                         <h1>Eastern Africa</h1>
-                        <p>There is less than 2,000 surviving cheetahs in eastern Africa</p>
+                        <p>There is less than 2,000 surviving cheetahs in Eastern Africa</p>
                     </div>
 
                     <!-- Markup for Dynamic content selcected by hotspots-->
@@ -257,7 +257,7 @@
                 <div class="conservation-content threats">
                     <h1>Threats</h1>
                     <p>
-                        Some of the most significant threats to the cheatah include; Hunting and poaching, farmers protecting livestock, climate change, the destruction of habitat, low rate of reproductive 
+                        Some of the most significant threats to the cheetah include; Hunting and poaching, farmers protecting livestock, climate change, the destruction of habitat, low rate of reproductive 
                         success compared to other mammals.
                     </p>
                 </div>
@@ -287,7 +287,7 @@
                     <h1>Sustainability program</h1>
                     <p>
                         The cheetah sustainability program is a breeding program to support conservation of the cheetah and ensure the 
-                        survival of the species. Litters of cheetahs are being breed in large breeding centers to help the repopulation of the species.
+                        survival of the species. Litters of cheetahs are being breed in large breeding centers to help the re-population of the species.
                     </p>
             </div> 
 
@@ -295,7 +295,7 @@
             <div class="conservation-content livestock">
                 <h1>Livestock guarding dogs</h1>
                 <p>
-                    The livestock guarding dog program is a non lethal predator control method that helps farmers and wildlife co-exist peacefully. 
+                    The livestock guarding dogs program is a non lethal predator control method that helps farmers and wildlife co-exist peacefully. 
                     The guard dogs reduce the cheetahs ability to get close to farm animals reducing the need for farmers to kill cheetahs to protect 
                     there livestock.
                 </p>
