Dialog text change

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             </div>
 
             <!-- Open dialog box content -->
-            <sl-dialog label="Success" class="dialog-overview">Enquiry lodged<sl-button slot="footer" variant="primary">Close</sl-button></sl-dialog>
+            <sl-dialog label="Success" class="dialog-overview">Enquiry lodged successfully. We will be in contact soon.<sl-button slot="footer" variant="primary">Close</sl-button></sl-dialog>
 
             <!-- Dialog box button in a container to center it-->
             <div class="center">
